- Dropdown menu of the rightmost top menu item now flows leftward and not off the device - Fix issue with 3rd party widgets that use CSS id as part of their css rules when widget is used in non-sidebar panels - Fix issue in header area divs where first widget may not be enclosed properly in header_top_wrapper - Removed extra padding in top level menu of boxed blue skin causing menu to expand too much vertical when justified - FontAwesome 4.3 - Normalize.css 3.0.3

--- a/skins/boxed/skin.css
+++ b/skins/boxed/skin.css
@@ -1,7 +1,7 @@
 /*
 Skin name: Boxed
 Skin uri: http://skins.semiologic.com/boxed/
-Version: 2.0.1
+Version: 2.0.2
 Author: Mike Koepke
 Author uri: http://www.semiologic.com
 Type: Standard
@@ -97,8 +97,8 @@ td {
 }
 
 #navbar a {
-	padding-left: 0.9375em;
-	padding-right: 0.9375em;
+/*	padding-left: 0.9375em;
+	padding-right: 0.9375em;  */
 	margin: 0;
 }
 
